# django-simple-icons

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: icon-sync.yml  main.yml
scripts/: bump_version.py  check_upstream_version.py  download_simple_icons.py  icon_slugs.py
src/django_simple_icons/: __init__.py  jinja.py
src/django_simple_icons/templatetags/: simple_icons.py
tests/: test_core.py  test_django.py  test_jinja.py  test_scripts.py
